Added option for the interface position

--- a/mod_highlighter_gk5/language/en-GB.mod_highlighter_gk5.ini
+++ b/mod_highlighter_gk5/language/en-GB.mod_highlighter_gk5.ini
@@ -108,6 +108,9 @@ MOD_HIGHLIGHTER_GK5_TIME_OFFSET_DESC="Use this option only when you have a probl
 
 MOD_HIGHLIGHTER_GK5_LAYOUT="Layout"
 MOD_HIGHLIGHTER_GK5_INTERFACE="Interface"
+MOD_HIGHLIGHTER_GK5_INTERFACE_POS="Interface position"
+MOD_HIGHLIGHTER_GK5_INTERFACE_LEFT="Left"
+MOD_HIGHLIGHTER_GK5_INTERFACE_RIGHT="Right"
 MOD_HIGHLIGHTER_GK5_INTERFACE_DESC="Show interface buttons"
 MOD_HIGHLIGHTER_GK5_INTROTEXT="Introtext"
 MOD_HIGHLIGHTER_GK5_INTROTEXT_DESC="Show introtext in the interface block"
