--- a/mod_highlighter_gk5/language/pl-PL.mod_highlighter_gk5.ini
+++ b/mod_highlighter_gk5/language/pl-PL.mod_highlighter_gk5.ini
@@ -108,6 +108,9 @@ MOD_HIGHLIGHTER_GK5_TIME_OFFSET_DESC="Używaj tej opcji tylko wtedy gdy masz pro
 
 MOD_HIGHLIGHTER_GK5_LAYOUT="Układ"
 MOD_HIGHLIGHTER_GK5_INTERFACE="Przyciski"
+MOD_HIGHLIGHTER_GK5_INTERFACE_POS="Pozycja przycisków"
+MOD_HIGHLIGHTER_GK5_INTERFACE_LEFT="Z lewej"
+MOD_HIGHLIGHTER_GK5_INTERFACE_RIGHT="Z prawej"
 MOD_HIGHLIGHTER_GK5_INTERFACE_DESC="Przyciski stronicowania poprzedni/następny"
 MOD_HIGHLIGHTER_GK5_INTROTEXT="Tekst wstępny"
 MOD_HIGHLIGHTER_GK5_INTROTEXT_DESC="Pokaż tekst wstępny w bloku z przyciskami."
