v.1.1 ready to release

--- a/mod_highlighter_gk5/language/en-GB.mod_highlighter_gk5.ini
+++ b/mod_highlighter_gk5/language/en-GB.mod_highlighter_gk5.ini
@@ -108,6 +108,9 @@ MOD_HIGHLIGHTER_GK5_TIME_OFFSET_DESC="Use this option only when you have a probl
 
 MOD_HIGHLIGHTER_GK5_LAYOUT="Layout"
 MOD_HIGHLIGHTER_GK5_INTERFACE="Interface"
+MOD_HIGHLIGHTER_GK5_INTERFACE_POS="Interface position"
+MOD_HIGHLIGHTER_GK5_INTERFACE_LEFT="Left"
+MOD_HIGHLIGHTER_GK5_INTERFACE_RIGHT="Right"
 MOD_HIGHLIGHTER_GK5_INTERFACE_DESC="Show interface buttons"
 MOD_HIGHLIGHTER_GK5_INTROTEXT="Introtext"
 MOD_HIGHLIGHTER_GK5_INTROTEXT_DESC="Show introtext in the interface block"
@@ -187,4 +190,4 @@ MOD_HIGHLIGHTER_GK5_INCLUDE_JQUERY_DESC="Force loading of the jQuery framework b
 
 ; About tab
 
-MOD_HIGHLIGHT_GK5_ABOUT_US_CONTENT="<div style='color: #555; line-height: 18px; font-size: 12px; padding: 20px 0 0'><p><strong>Author:</strong></p>Highlighter GK5 is developed by <a href='https://www.gavick.com' target='_blank' style='color: #6c7d0a'>GavickPro</a>. Since 2007 we have been focusing on creating <a href='https://www.gavick.com/joomla-templates.html' target='_blank' style='color: #6c7d0a'>Joomla Templates</a> up to the minute in order to fulfill your expectations. Additionally, we provide you with <a href='https://www.gavick.com/news-show-pro-gk4.html' target='_blank' style='color: #6c7d0a'>free extensions</a>, modules and you can also visit our <a href='http://gavick.com/magazine/' target='_blank' style='color: #6c7d0a'>Gavick Magazine</a> where it is possible for you to get some useful information connected with services provided and how to avoid some possible problems.<p style='font-size: 11px; text-align: center;margin: 60px -10px 0; border-top: 1px solid #eee; padding: 6px 0'>Highlighter GK5 is released under the <a href='http://www.gnu.org/licenses/gpl-2.0.html' target='_blank' style='color: #6c7d0a'>GNU/GPL v2 license.</a></p></div>"
+MOD_HIGHLIGHT_GK5_ABOUT_US_CONTENT="<div style='color: #555; line-height: 18px; font-size: 12px; padding: 20px 0 0'><p><strong>Author:</strong></p>Highlighter GK5 is developed by <a href='https://www.gavick.com' target='_blank' style='color: #6c7d0a'>GavickPro</a>. Since 2007 we have been focusing on creating <a href='https://www.gavick.com/joomla-templates.html' target='_blank' style='color: #6c7d0a'>Joomla Templates</a> up to the minute in order to fulfill your expectations. Additionally, we provide you with <a href='https://www.gavick.com/news-show-pro-gk4.html' target='_blank' style='color: #6c7d0a'>free extensions</a>, modules and you can also visit our <a href='http://gavick.com/magazine/' target='_blank' style='color: #6c7d0a'>Gavick Magazine</a> where it is possible for you to get some useful information connected with services provided and how to avoid some possible problems.<p style='font-size: 11px; text-align: center;margin: 60px -10px 0; border-top: 1px solid #eee; padding: 6px 0'>Highlighter GK5 is released under the <a href='http://www.gnu.org/licenses/gpl-2.0.html' target='_blank' style='color: #6c7d0a'>GNU/GPL v2 license.</a></p>"
